[package]
name = "clairvoyance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3.4"
heim = { version = "0.1.0-rc.1", features = ["full"] }
bincode = "2.0.0-beta.0"
tokio = { version = "1", features = ["full", "parking_lot"] }
once_cell = "^1"
anyhow = "1.0"
smallvec = { version = "1.7", features = ["write", "const_new", "union", "may_dangle"] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
pin-utils = "0.1.0"
log = "0.4"
fern = "0.6.0"
byte-unit = { version = "4.0.13", default-features = false, features = ["std", "serde"] }
cfg-if = "1.0.0"
num_cpus = "1"
chrono = "0.4"
argh = "0.1"
parse_duration = "2.1.1"
plotters = { version = "0.3.1", features = ["svg_backend", "area_series", "line_series"] }
integer-encoding = { version = "3.0.2", features = ["tokio_async"] }
